--- a/client_server_src/client/package.json
+++ b/client_server_src/client/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
     "@react-oauth/google": "^0.12.1",
     "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/supabase-js": "^2.54.0",
     "cra-template-typescript": "1.2.0",
     "dotenv": "^16.4.7",
     "react": "^19.0.0",
     "react-canvas-paint": "^1.0.1",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.2.0",
+    "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.8.1"
   },
@@ -45,6 +50,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.2",
+    "tailwindcss": "^3.4.17",
     "web-vitals": "^4.2.4"
   }
 }
