--- a/client_server_src/client/package.json
+++ b/client_server_src/client/package.json
@@ -59,8 +59,10 @@
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.2",
     "eslint-plugin-storybook": "^9.1.3",
+    "jest": "^27.5.1",
     "prop-types": "^15.8.1",
     "storybook": "^9.1.3",
+    "storybook-addon-remix-react-router": "^5.0.0",
     "tailwindcss": "^3.4.17",
     "web-vitals": "^4.2.4",
     "webpack": "^5.101.3"
