--- a/client_server_src/client/package.json
+++ b/client_server_src/client/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "typewriter-effect": "^2.22.0"
   },
   "scripts": {
     "start": "react-scripts start",
