--- a/client_server_src/client/package.json
+++ b/client_server_src/client/package.json
@@ -59,6 +59,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.1.9",
     "eslint-plugin-storybook": "^9.1.3",
     "jest": "^27.5.1",
     "prop-types": "^15.8.1",
